--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="textColor">#FFFFFF</color>
+    <color name="colorPrimary">#280070</color>
+    <color name="colorSecondary">#FDB913</color>
+    <color name="backgroundColor">#2C2E37</color>
+    <color name="ballColor">#1E2733</color>
+
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
